--- a/src/App.css
+++ b/src/App.css
@@ -45,12 +45,15 @@
   font-size: 16px;
   border: none;
   cursor: pointer;
+  margin: 80px;
+  width: 700px
 }
 
 /* Dropdown button on hover & focus */
 .dropbtn:hover, .dropbtn:focus {
   background-color: black;
-  color: white
+  color: white;
+  transition: 0.3s;
 }
 
 .dropdown {
@@ -85,3 +88,21 @@
 
 /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
 .show {display:block;}
+
+.single-poem-card {
+  width: 700px;
+  height: 700px;
+  padding: 50px;
+  border: 2px solid grey;
+  box-sizing: border-box;
+  position: relative;
+  align-self: flex-end;
+  border-radius: 5px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  text-align: center;
+}
+
+.flex-container {
+  display: flex;
+  justify-content: center;
+}
