--- a/src/App.css
+++ b/src/App.css
@@ -106,3 +106,67 @@
   display: flex;
   justify-content: center;
 }
+
+.landing-page {
+  background-color: black;
+  position: absolute;
+  background: url('https://images2.minutemediacdn.com/image/upload/c_fill,g_auto,h_1248,w_2220/f_auto,q_auto,w_1100/v1554919465/shape/mentalfloss/istock-157382617.jpg') no-repeat center fixed;
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  align-items: flex-end;
+  justify-content: center;
+}
+
+.saying {
+  justify-content: center;
+}
+
+.log-in-button {
+  color: olive;
+  background: #fff;
+  border: 2px solid olive;
+  font-size: 17px;
+  padding: 7px 12px;
+  font-weight: normal;
+  margin: 16px 0;
+  margin-right: 12px;
+  display: inline-block;
+  text-decoration: none;
+  font-family: 'Open Sans', sans-serif;
+  min-width: 120px;
+}
+
+.sign-up-button {
+  color: olive;
+  background: #fff;
+  border: 1px solid olive;
+  font-size: 17px;
+  padding: 7px 12px;
+  font-weight: normal;
+  margin: 6px 0;
+  margin-right: 12px;
+  display: inline-block;
+  text-decoration: none;
+  font-family: 'Open Sans', sans-serif;
+  min-width: 120px;
+}
+
+.input-form {
+  flex-grow: 1;
+  padding-left: 20px;
+  font-size: 1.2em;
+  color: olive;
+  font-weight: bold;
+}
+
+#login-signup-container {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  flex-direction: column;
+  margin-bottom: 6%;
+
+}
