--- a/src/App.css
+++ b/src/App.css
@@ -72,7 +72,7 @@
 }
 
 /* Links inside the dropdown */
-.dropdown-content a {
+.dropdown-content li {
   color: black;
   padding: 12px 16px;
   text-decoration: none;
@@ -80,7 +80,7 @@
 }
 
 /* Change color of dropdown links on hover */
-.dropdown-content a:hover {
+.dropdown-content li:hover {
   background-color: #ddd;
   transition: 0.1s;
 }
@@ -99,12 +99,16 @@
   border-radius: 5px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   text-align: center;
+  overflow: scroll;
+  margin-bottom: 2em
 }
 
 .flex-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  margin: 1em;
+  margin-bottom: 2em
 }
 
 .landing-page {
@@ -178,10 +182,9 @@
   width: 100px;
   height: 100px;
   padding: 5px;
-  border: 1px solid blue;
+  /* border: 1px solid blue; */
   overflow: visible;
   padding: 70px 0;
-  border: 3px solid green;
   text-align: center;
 }
 
@@ -192,6 +195,65 @@
   box-shadow: 10px 10px grey;
   padding: 15px;
   border-radius: 10px;
-  margin: 15px;
+  margin: 2em;
   overflow: scroll;
 }
+
+/* Dropdown Button */
+.dropbtn-tag {
+  background-color: #4CAF50;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+/* Dropdown button on hover & focus */
+.dropbtn-tag:hover, .dropbtn:focus {
+  background-color: black;
+}
+
+/* The search field */
+#myInputTag {
+  box-sizing: border-box;
+  background-position: 14px 12px;
+  background-repeat: no-repeat;
+  font-size: 16px;
+  padding: 14px 20px 12px 45px;
+  border: none;
+  border-bottom: 1px solid #ddd;
+}
+
+/* The search field when it gets focus/clicked on */
+#myInputTag:focus {outline: 3px solid #ddd;}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown-tag {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content-tag {
+  /* display: none; */
+  position: absolute;
+  background-color: #f6f6f6;
+  min-width: 230px;
+  border: 1px solid #ddd;
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content-tag a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content-tag a:hover {background-color: #f1f1f1}
+
+/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+.show {display:block;}
