colors on create form

--- a/src/App.css
+++ b/src/App.css
@@ -197,7 +197,7 @@
   margin-left: 10px;
   text-align: center;
 	width: 400px;
-	color: #F072A9;
+	color: grey;
 	font-weight: bold;
 	font-size: 13px;
 	text-shadow: 1px 1px 1px #f
@@ -208,7 +208,7 @@
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
   margin: 0px 0px 10px 0px;
-  border: 1px solid #FFD2D2;
+  border: 1px solid grey;
   padding: 20px;
   background: #FFF4F4;
   box-shadow: inset 0px 0px 15px #FFE5E5;
@@ -217,10 +217,10 @@
 }
 
 .create-poem-form fieldset legend{
-  color: #FFA0C9;
-  border-top: 1px solid #FFD2D2;
-  border-left: 1px solid #FFD2D2;
-  border-right: 1px solid #FFD2D2;
+  color: grey;
+  border-top: 1px solid grey;
+  border-left: 1px solid grey;
+  border-right: 1px solid grey;
   border-radius: 5px 5px 0px 0px;
   -webkit-border-radius: 5px 5px 0px 0px;
   -moz-border-radius: 5px 5px 0px 0px;
@@ -237,14 +237,14 @@
 	border-radius: 3px;
 	-webkit-border-radius: 3px;
 	-moz-border-radius: 3px;
-	border: 1px solid #FFC2DC;
+	border: 1px solid grey;
 	outline: none;
-	color: #F072A9;
+	color: grey;
 	padding: 5px 8px 5px 8px;
 	box-shadow: inset 1px 1px 4px #FFD5E7;
 	-moz-box-shadow: inset 1px 1px 4px #FFD5E7;
 	-webkit-box-shadow: inset 1px 1px 4px #FFD5E7;
-	background: #FFEFF6;
+	background: white;
 	width:50%;
 }
 .create-poem-form input[type=text]{
@@ -253,10 +253,10 @@
 
 
 .form-style-3  input[type=submit]{
-	background: #EB3B88;
+	background: white;
 	border: 1px solid #C94A81;
 	padding: 5px 15px 5px 15px;
-	color: #FFCBE2;
+	color: white;
 	box-shadow: inset -1px -1px 3px #FF62A7;
 	-moz-box-shadow: inset -1px -1px 3px #FF62A7;
 	-webkit-box-shadow: inset -1px -1px 3px #FF62A7;
