--- a/src/App.css
+++ b/src/App.css
@@ -210,10 +210,10 @@
   margin: 0px 0px 10px 0px;
   border: 1px solid grey;
   padding: 20px;
-  background: #FFF4F4;
-  box-shadow: inset 0px 0px 15px #FFE5E5;
-  -moz-box-shadow: inset 0px 0px 15px #FFE5E5;
-  -webkit-box-shadow: inset 0px 0px 15px #FFE5E5;
+  background: #F5F5F5;
+  box-shadow: inset 0px 0px 15px #F5F5F5;
+  -moz-box-shadow: inset 0px 0px 15px #F5F5F5;
+  -webkit-box-shadow: inset 0px 0px 15px #F5F5F5;
 }
 
 .create-poem-form fieldset legend{
@@ -224,11 +224,11 @@
   border-radius: 5px 5px 0px 0px;
   -webkit-border-radius: 5px 5px 0px 0px;
   -moz-border-radius: 5px 5px 0px 0px;
-  background: #FFF4F4;
+  background: #F8F8F8;
   padding: 0px 8px 3px 8px;
-  box-shadow: -0px -1px 2px #F1F1F1;
-  -moz-box-shadow:-0px -1px 2px #F1F1F1;
-  -webkit-box-shadow:-0px -1px 2px #F1F1F1;
+  box-shadow: -0px -1px 2px #F5F5F5;
+  -moz-box-shadow:-0px -1px 2px #F5F5F5;
+  -webkit-box-shadow:-0px -1px 2px #F5F5F5;
   font-weight: normal;
   font-size: 12px;
 }
@@ -241,9 +241,9 @@
 	outline: none;
 	color: grey;
 	padding: 5px 8px 5px 8px;
-	box-shadow: inset 1px 1px 4px #FFD5E7;
-	-moz-box-shadow: inset 1px 1px 4px #FFD5E7;
-	-webkit-box-shadow: inset 1px 1px 4px #FFD5E7;
+	box-shadow: inset 1px 1px 4px #F5F5F5;
+	-moz-box-shadow: inset 1px 1px 4px #F5F5F5;
+	-webkit-box-shadow: inset 1px 1px 4px #F5F5F5;
 	background: white;
 	width:50%;
 }
@@ -251,15 +251,14 @@
   margin-left: 10px;
 }
 
-
 .form-style-3  input[type=submit]{
 	background: white;
-	border: 1px solid #C94A81;
+	border: 1px solid #F5F5F5;
 	padding: 5px 15px 5px 15px;
 	color: white;
-	box-shadow: inset -1px -1px 3px #FF62A7;
-	-moz-box-shadow: inset -1px -1px 3px #FF62A7;
-	-webkit-box-shadow: inset -1px -1px 3px #FF62A7;
+	box-shadow: inset -1px -1px 3px #F5F5F5;
+	-moz-box-shadow: inset -1px -1px 3px #F5F5F5;
+	-webkit-box-shadow: inset -1px -1px 3px #F5F5F5;
 	border-radius: 3px;
 	border-radius: 3px;
 	-webkit-border-radius: 3px;
